--- a/index.html
+++ b/index.html
@@ -889,7 +889,7 @@
             </div>
             
             <div class="copyright">
-                &copy; 2024 Hunt3r. All rights reserved. | Made with <i class="fas fa-heart" style="color: var(--primary);"></i> by Ali
+                &copy; 2024 Hunt3r. All rights reserved. Game Modding for Educational and Research Purposes Only | Made with <i class="fas fa-heart" style="color: var(--primary);"></i> by Ali
             </div>
         </div>
     </footer>
@@ -1007,4 +1007,5 @@
         }
     </script>
 </body>
+
 </html>
